reorganice carpeta de proyecto

--- a/src/main/webapp/phaser/imageFollowInput.html
+++ b/src/main/webapp/phaser/imageFollowInput.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <script type="text/javascript" src="js/phaser.min.js"></script>
-    <script type="text/javascript" src="js/imageFollowInput.js"></script>
+    <script type="text/javascript" src="../js/phaser/phaser.min.js"></script>
+    <script type="text/javascript" src="../js/phaser/imageFollowInput.js"></script>
     <!--<link type="text/css" rel="stylesheet" href="css/moveOnImage.css">-->
     <title>Image Follow Input</title>
 </head>
