--- a/src/main/webapp/phaser/loadAnAnimation.html
+++ b/src/main/webapp/phaser/loadAnAnimation.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <script type="text/javascript" src="js/phaser.min.js"></script>
-    <script type="text/javascript" src="js/loadAnAnimation.js"></script>
+    <script type="text/javascript" src="../js/phaser/phaser.min.js"></script>
+    <script type="text/javascript" src="../js/phaser/loadAnAnimation.js"></script>
     <meta charset="UTF-8">
     <title>Load an Animation</title>
 </head>
