--- a/src/main/webapp/phaser/moveOnImage.html
+++ b/src/main/webapp/phaser/moveOnImage.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <script type="text/javascript" src="js/phaser.min.js"></script>
-    <script type="text/javascript" src="js/moveOnImage.js"></script>
-    <link type="text/css" rel="stylesheet" href="css/moveOnImage.css">
+    <script type="text/javascript" src="../js/phaser/phaser.min.js"></script>
+    <script type="text/javascript" src="../js/phaser/moveOnImage.js"></script>
+    <link type="text/css" rel="stylesheet" href="../css/phaser/moveOnImage.css">
     <title>Move On Image</title>
 </head>
 <body>
