agregue bootstrap y comence aplicando DRY con DataBaseHelper

--- a/src/main/webapp/phaser/imageFollowInput.html
+++ b/src/main/webapp/phaser/imageFollowInput.html
@@ -2,6 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="../css/bootstrap.min.css">
     <script type="text/javascript" src="../js/phaser/phaser.min.js"></script>
     <script type="text/javascript" src="../js/phaser/imageFollowInput.js"></script>
     <!--<link type="text/css" rel="stylesheet" href="css/moveOnImage.css">-->
@@ -9,5 +12,7 @@
 </head>
 <body>
     <div id="image"></div>
+    <script src="../js/jquery-3.1.1.min.js"></script>
+    <script src="../js/bootstrap.min.js"></script>
 </body>
 </html>
