hasta aqui desplegable en FormularioInsertarLibro y en MostrarLibros sin DRY de consultas SQL

--- a/src/main/webapp/phaser/renderText.html
+++ b/src/main/webapp/phaser/renderText.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <script type="text/javascript" src="../js/phaser/phaser.min.js"></script>
-    <script type="text/javascript" src="../js/phaser/loadAnAnimation.js"></script>
-    <title>Load an Animation</title>
+    <script type="text/javascript" src="../js/phaser/renderText.js"></script>
+    <title>Title</title>
 </head>
 <body>
     <div id="image"></div>
